Update bundles/org.openhab.core.config.core/src/main/java/org/openhab/core/config/core/internal/net/NetworkConfigOptionProvider.java
Co-authored-by: Holger Friedrich <mail@holger-friedrich.de>
Signed-off-by: Nadahar <Nadahar@users.noreply.github.com>